--- a/isctespot-main/server/.gitignore
+++ b/isctespot-main/server/.gitignore
@@ -161,3 +161,20 @@ cython_debug/
 #  and can be added to the global gitignore or merged into this file.  For a more nuclear
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
+
+# ----------------------------------------------------
+# SEGURANÇA E SEGREDOS 
+# ----------------------------------------------------
+
+# Variáveis de ambiente (Segredos AES e Caminhos)
+.env
+.env.*
+
+# Chaves Privadas e Públicas RSA 
+*.pem
+*.key
+*.pub
+*.crt
+
+# Ficheiros específicos de autenticação se necessário
+server/api/auth/*.pem
